fix: update formula path in workflow to correct location

--- a/.github/workflows/update-formula.yml
+++ b/.github/workflows/update-formula.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           echo "REPO_OWNER=livetheoogway" >> $GITHUB_ENV
           echo "REPO_NAME=bailiff" >> $GITHUB_ENV
-          echo "FORMULA_PATH=Formula/bailiff.rb" >> $GITHUB_ENV
+          echo "FORMULA_PATH=bailiff.rb" >> $GITHUB_ENV
       
       - name: Fetch latest release info
         run: |
